--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+/src/datasets/*.csv
+
+/out/*
+
 ### IntelliJ IDEA ###
 .idea/modules.xml
 .idea/jarRepositories.xml
@@ -11,6 +15,7 @@ target/
 *.iws
 *.iml
 *.ipr
+*.csv
 
 ### Eclipse ###
 .apt_generated
